# kode

./: .gitignore  Dockerfile  README.md  config_fastapi.json  docker-compose.yml  manage.py  pyproject.toml
docs/: openapi.yaml
kode/: __init__.py  api_v1.py  baseclasses.py  constants.py  controls.py  mongodb.py  structures.py
